--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./css/output.css">
-    <script src="https://cdn.tailwindcss.com"></script>
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 </head>
 
@@ -20,11 +20,15 @@
         * {
             font-family: url(./Poppins/Poppins-Light.ttf);
         }
+
+        .audience {
+            background-image: url(./images/audience.png);
+        }
     </style>
     <!-- Header -->
     <header class="sticky top-0 left-0 right-0 h-[80px] bg-gray-950 ">
         <nav class="custom-container flex justify-between items-center flex-row py-2">
-            <div>
+            <div class="w-50%">
                 <a href="./index.html"><img src="./images/main_logo.svg" alt="logo" class="w-full"></a>
             </div>
             <ul class="lg:flex gap-[20px] hidden lg:block">
@@ -64,8 +68,8 @@
 
     <main>
         <!-- Hero -->
-        <section class="custom-container h-100">
-            <div class="flex flex-col items-center gap-[20px]">
+        <section class="custom-container h-100 ">
+            <div class="flex flex-col items-center gap-[20px] my-[30px] md:my-[40px] lg:my-[60px]">
                 <div>
                     <h1 class="text-white text-center text-[40px] lg:text-[80px] md:text-[60px] font-bold">Own your
                         audience.</h1>
@@ -102,8 +106,8 @@
         <!-- Hero end -->
 
         <!-- Marico -->
-        <section class="custom-container">
-            <div class="flex flex-col items-center gap-5">
+        <section class="custom-container h-100">
+            <div class="flex flex-col items-center gap-5 my-[30px] md:my-[40px] lg:my-11">
                 <div>
                     <div>
                         <h1 class="text-white text-center text-[30px] lg:text-[60px] md:text-[40px] font-bold">Why
@@ -132,7 +136,7 @@
                     </div>
                 </div>
                 <div class="flex flex-col items-center">
-                    <div class="flex flex-col items-center gap-3">
+                    <div class="flex flex-col items-center gap-3 my-4 lg:my-9 md:my-5">
                         <p class=" hover:text-gray-300 text-blue-900 text-center text-[26px] font-bold">Step 1</p>
                         <h1 class="text-white text-center text-[30px] lg:text-[60px] md:text-[40px] font-bold">Connect
                             Your Content</h1>
@@ -150,19 +154,208 @@
         <!-- Marico end-->
 
         <!-- Content -->
-        <section class="custom-container">
-            <div class="flex justify-between flex-wrap items-center">
-                <div>
-                    <h4 class="text-[26px] text-center text-white font-bold ">
+        <section class="custom-container h-100">
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 my-[30px] md:my-[40px] lg:my-11 gap-2">
+                <div class="flex flex-col items-center lg:items-start md:items-start gap-2 md:gap-4 lg:gap-6">
+                    <h4 class="text-[20px] md:text-[24px] lg:text-[26px] my-4 text-white font-bold ">
                         Your Homepage
                     </h4>
-                    <h2>Your Content.</h2>
-                    <h2>All in<span>One Spot</span></h2>
+                    <div>
+                        <h2 class="text-white  text-[30px] lg:text-[60px] md:text-[40px] font-bold">Your Content.</h2>
+                        <h2 class="text-blue-900  text-[30px] lg:text-[60px] md:text-[40px] font-bold">All in<span>One
+                                Spot</span></h2>
+                    </div>
+                    <div>
+                        <p class="flex items-center gap-2 my-1 text-white text-[18px] lg:text-[24px] md:text-[22px]">
+                            <span
+                                class="bg-gray-500 rounded-full flex items-center justify-center  h-2 w-2  p-3 ">1</span>Bring
+                            all of your content together into one homepage.
+                        </p>
+                        <p class="flex items-center gap-2 my-1 text-white  text-[18px] lg:text-[24px] md:text-[22px]">
+                            <span
+                                class="bg-gray-500 rounded-full flex items-center justify-center  h-2 w-2  p-3">2</span>Your
+                            page automatically updates whenever you create.
+                        </p>
+                    </div>
+
+                    <div class="flex flex-row items-center gap-[20px]">
+                        <button
+                            class="text-white rounded-lg cursor-pointer bg-blue-900 py-2 px-2 hover:text-blue-900 hover:bg-white w-[140px]">
+                            Get Started Now
+                        </button>
+                        <button
+                            class="text-gray-500 border-[1px] border-gray-500 rounded-lg cursor-pointer py-2 px-2 hover:text-blue-900 hover:bg-white w-[140px]">
+                            View A Demo
+                        </button>
+                    </div>
+                </div>
+                <div class="w-full">
+                    <img class="w-full" src="./images/charlie_puth.png" alt="charlie_puth">
                 </div>
             </div>
         </section>
         <!-- Content end -->
+
+        <!-- Homepage -->
+        <section class="custom-container h-100">
+            <div class="flex flex-col items-center gap-3">
+                <p class=" hover:text-gray-300 text-blue-900 text-center text-[26px] font-bold">Step 2</p>
+                <h1 class="text-white text-center text-[30px] lg:text-[50px] md:text-[40px] font-bold">Share Your
+                    Homepage</h1>
+                <p class="text-gray-400 text-center text-[20px] lg:text-[30px] md:text-[24px] lg:w-[800px]">
+                    Share your Wavium homepage link with your followers, and
+                    we'll handle the rest.</p>
+
+                <div
+                    class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 my-[30px] md:my-[40px] lg:my-11 justify-center gap-6">
+                    <div class="bg-gray-900 p-4">
+                        <a href="#" class="text-green-700 text-[18px] lg:text-[24px] md:text-[22px] ">One Link</a>
+                        <h1 class="text-gray-500 text-[30px] lg:text-[40px] md:text-[30px] font-bold">ALL You Create.
+                        </h1>
+                        <h1 class="text-white text-[30px] lg:text-[40px] md:text-[30px] font-bold">One Link</h1>
+                        <div>
+                            <img src="./images/mobile.svg" alt="mobile" class="w-full">
+                        </div>
+                    </div>
+                    <div class="bg-gray-900 p-4 ">
+                        <a href="#" class="text-green-700 text-[18px] lg:text-[24px] md:text-[22px] ">Collect
+                            Subscribers</a>
+                        <h1 class="text-gray-500 text-[30px] lg:text-[40px] md:text-[30px] font-bold">Emails.</h1>
+                        <h1 class="text-gray-500 text-[30px] lg:text-[40px] md:text-[30px] font-bold">Phone #s.</h1>
+                        <h1 class="text-white text-[30px] lg:text-[40px] md:text-[30px] font-bold">All Yours.</h1>
+                    </div>
+
+                </div>
+                <button
+                    class="text-white rounded-lg cursor-pointer bg-blue-900 py-2 px-2 hover:text-blue-900 hover:bg-white w-[140px]">
+                    Get Started Now
+                </button>
+            </div>
+        </section>
+        <!-- Homepage end -->
+
+
+        <!-- Media -->
+        <section class="custom-container h-100">
+            <div class="flex flex-col items-center gap-3 my-4 lg:my-9 md:my-5">
+                <div>
+                    <p class=" hover:text-gray-300 text-blue-900 text-center text-[26px] font-bold">Step 3</p>
+                    <h1 class="text-white text-center text-[30px] lg:text-[50px] md:text-[40px] font-bold">Send Emails &
+                        Text Messages</h1>
+                    <p class="text-gray-400 text-center text-[20px] lg:text-[26px] md:text-[22px] lg:w-[800px]">
+                        No more going through a social platform. Reach and engage
+                        your audience directly over email and text massage.</p>
+                </div>
+                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 my-[30px] md:my-[40px] lg:my-11 gap-2">
+
+                    <div class="flex flex-col items-start lg:items-start md:items-start gap-2 md:gap-4 lg:gap-6">
+                        <h4 class="text-[20px] md:text-[22px] lg:text-[24px] my-4 text-white font-bold ">
+                            Create & Share
+                        </h4>
+                        <div>
+                            <h2 class="text-white  text-[30px] lg:text-[60px] md:text-[40px] font-bold">Reach Your.
+                            </h2>
+                            <h2 class="text-white  text-[30px] lg:text-[60px] md:text-[40px] font-bold">
+                                Audience <span class="text-blue-800">Directly.</span></h2>
+                        </div>
+                        <div>
+                            <p
+                                class="flex items-center gap-2 my-1 text-white text-[18px] lg:text-[24px] md:text-[22px]">
+                                <span
+                                    class="bg-gray-500 rounded-full flex items-center justify-center  h-2 w-2  p-3 ">1</span>Embed
+                                content or create something new to share.
+                            </p>
+                            <p
+                                class="flex items-center gap-2 my-1 text-white  text-[18px] lg:text-[24px] md:text-[22px]">
+                                <span
+                                    class="bg-gray-500 rounded-full flex items-center justify-center  h-2 w-2  p-3">2</span>Your
+                                page automatically updates whenever you create.
+                            </p>
+                        </div>
+
+                        <div class="flex flex-row items-center gap-[20px]">
+                            <button
+                                class="text-white rounded-lg cursor-pointer bg-blue-900 py-2 px-2 hover:text-blue-900 hover:bg-white w-[140px]">
+                                Get Started Now
+                            </button>
+                            <button
+                                class="text-gray-500 border-[1px] border-gray-500 rounded-lg cursor-pointer py-2 px-2 hover:text-blue-900 hover:bg-white w-[140px]">
+                                View A Demo
+                            </button>
+                        </div>
+                    </div>
+
+                    <div class="w-full h-full">
+                        <img class="w-full h-full" src="./images/blackpink.svg" alt="blackpink">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Media end-->
+
+        <!-- experts -->
+        <section class="custom-container h-100">
+            <div class="flex flex-col gap-4 items-center my-3 lg:my-9 md:my-6 lg:gap-8">
+                <h1 class="text-white text-[30px] lg:text-[40px] md:text-[30px] font-bold">Experts Agree</h1>
+                <div class="w-full"><img class="w-full" src="./images/experts.png" alt="experts"></div>
+            </div>
+        </section>
+        <!-- experts end -->
+
+        <!-- audience -->
+        <section class="custom-container h-100">
+            <div class="audience h-[40vh] flex items-center justify-center md:h-[50vh] lg:h-[60vh]">
+                <h1 class="text-white text-[30px] lg:text-[40px] md:text-[30px] font-bold lg:w-[800px] text-center">
+                    We've helped over 1,000 creatorsre
+                    claim control of their audience.</h1>
+            </div>
+        </section>
+        <!-- audience end -->
+
+        <!-- get start -->
+         <section class="custom-container h-100 flex items-center justify-center">
+<div class="h-100 my-10 flex items-center justify-center flex-col gap-4">
+<img src="./images/footer-logo.svg" alt="footer-logo">
+<h1 class="text-white text-[30px] lg:text-[40px] md:text-[30px] font-bold">Get Started Now</h1>
+<p class="text-gray-400  text-[20px] lg:text-[30px] md:text-[24px]">Setup is easy and takes under 5 minutes.</p>
+<button class="text-white rounded-lg cursor-pointer bg-blue-900 py-2 px-2 hover:text-blue-900 hover:bg-white w-[140px]">
+    Get Started Now
+</button>
+<h4 class="text-gray-500 text-[24px] text-center"><span class="text-white"><i
+            class="fa-solid fa-circle-dot text-green-500"></i> 1000+</span>creators have already
+    started</h4>
+</div>
+         </section>
+        <!-- get start end -->
+
+        <!-- footer -->
+         <section class="custom-container h-100 flex items-center justify-between">
+<div>
+    <img src="./images/main_logo.svg" alt="main_logo">
+    <p class="text-gray-500 text-[18px]">info@marico.co</p>
+</div>
+<ul class="lg:flex gap-[20px] hidden lg:block">
+    <li
+        class="text-[18px] text-gray-600 border-b-[2px] border-b-transparent hover:text-blue-900 hover:border-b-[2px] hover:border-b-blue-700">
+        <a href="#">Use Cases</a>
+    </li>
+    <li
+        class="text-[18px] text-gray-600 border-b-[2px] border-b-transparent hover:text-blue-900 hover:border-b-[2px] hover:border-b-blue-700">
+        <a href="#">About</a>
+    </li>
+    <li
+        class="text-[18px] text-gray-600 border-b-[2px] border-b-transparent hover:text-blue-900 hover:border-b-[2px] hover:border-b-blue-700">
+        <a href="#">Pricing</a>
+    </li>
+    <li
+        class="text-[18px] text-gray-600 border-b-[2px] border-b-transparent hover:text-blue-900 hover:border-b-[2px] hover:border-b-blue-700">
+        <a href="#">Blog</a>
+    </li>
+</ul>
+         </section>
+        <!-- footer end -->
     </main>
+    <script src="https://cdn.tailwindcss.com"></script>
 </body>
 
 </html>
