--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
         <!-- get start -->
          <section class="custom-container h-100 flex items-center justify-center">
 <div class="h-100 my-10 flex items-center justify-center flex-col gap-4">
-<img src="./images/footer-logo.svg" alt="footer-logo">
+<div class="w-[60px]"><img class="w-full" src="./images/footer-logo.svg" alt="footer-logo"></div>
 <h1 class="text-white text-[30px] lg:text-[40px] md:text-[30px] font-bold">Get Started Now</h1>
 <p class="text-gray-400  text-[20px] lg:text-[30px] md:text-[24px]">Setup is easy and takes under 5 minutes.</p>
 <button class="text-white rounded-lg cursor-pointer bg-blue-900 py-2 px-2 hover:text-blue-900 hover:bg-white w-[140px]">
